# src/applications/controllers/auths/auth.controller.go
@@ -17,6 +17,14 @@ import (
 
 var validate = validator.New()
 
+// @Summary      Authentication
+// @Description  Get access token by login
+// @Tags         Auth
+// @Accept		 json
+// @Param 		 request body schemas.AuthBodySchema true "Auth body"
+// @Success      200  {object} schemas.ResponseSchema{data=schemas.AuthResponseSchema} "Successful response"
+// @Failure		 400  {object} schemas.ResponseSchema "Failure response"
+// @Router       /auth [post]
 func Login(w http.ResponseWriter, r *http.Request) {
 	// validate request-body
 	var body schemas.AuthBodySchema
