# src/interfaces/v1/routes/auths/auth.route.go
@@ -8,17 +8,9 @@ import (
 	"net/http"
 )
 
-// @Summary      Authentication
-// @Description  Get access token by login
-// @Tags         Auth
-// @Accept		 json
-// @Param 		 request body schemas.AuthBodySchema true "Auth body"
-// @Success      200  {object} schemas.ResponseSchema{data=schemas.AuthResponseSchema} "Successful response"
-// @Failure		 400  {object} schemas.ResponseSchema "Failure response"
-// @Router       /auth [post]
 func AuthRoutes(mux *http.ServeMux) {
 	mux.HandleFunc("/auth", middlewares.Apply(
 		authcontrollers.Login,
-		middlewarecomponents.Method("POST"),
+		middlewarecomponents.Method([]string{"POST"}),
 	))
 }
