# src/interfaces/v1/routes/welcomes/welcome.route.go
@@ -7,14 +7,9 @@ import (
 	"net/http"
 )
 
-// @Summary      Welcome point
-// @Description  Welcome entry point to test API run
-// @Tags         Welcome
-// @Success      200  {object} schemas.ResponseSchema{data=schemas.WelcomeResponseSchema} "Successful response"
-// @Router       /welcome [get]
 func WelcomeRoutes(mux *http.ServeMux) {
 	mux.HandleFunc("/welcome", middlewares.Apply(
 		welcomecontrollers.WelcomeControllers,
-		middlewarecomponents.Method("GET"),
+		middlewarecomponents.Method([]string{"GET"}),
 	))
 }
